[options]
packages = find:
test_suite = jsonargparse_tests
python_requires = >=3.4
install_requires =
    PyYAML>=3.13


[options.extras_require]
all =
    %(signatures)s
    %(jsonnet)s
    %(urls)s
signatures =
    %(jsonschema)s
    docstring-parser>=0.7.3
jsonschema =
    jsonschema>=2.6.0
jsonnet =
    jsonnet>=0.13.0
urls =
    validators>=0.14.2
    requests>=2.18.4
test =
    %(test_no_urls)s
    responses>=0.12.0
test_no_urls =
    coverage>=4.5.1
dev =
    pylint>=1.8.3
    pycodestyle>=2.5.0
    mypy>=0.701
    bump2version>=0.5.11
    twine>=3.1.1
doc =
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10


[metadata]
name = jsonargparse
version = 3.0.0.dev3
description = Parsing of command line options, yaml/jsonnet config files and/or environment variables based on argparse.
long_description_content_type = text/x-rst
author = Mauricio Villegas
author-email = mauricio@omnius.com
license = MIT
url = https://omni-us.github.io/jsonargparse
project-urls =
    Documentation = https://omni-us.github.io/jsonargparse
    GitHub = https://github.com/omni-us/jsonargparse
    PyPI = https://pypi.org/project/jsonargparse
    CircleCI = https://circleci.com/gh/omni-us/jsonargparse
    SonarCloud = https://sonarcloud.io/dashboard?id=omni-us_jsonargparse
    Codecov = https://codecov.io/gh/omni-us/jsonargparse
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build


[pycodestyle]
exclude = sphinx/conf.py,setup.py
ignore = E241,E265,E128,E266,E226,E722,E252,E231,W291,E303,E221,E402,E306,E704,E251,E301
max-line-length = 180


[mypy]
ignore_missing_imports = true
allow_redefinition = true
